--- a/EmprestimosLivros/Views/Emprestimos/Editar.cshtml
+++ b/EmprestimosLivros/Views/Emprestimos/Editar.cshtml
@@ -1,14 +1,15 @@
 ﻿@model EmprestimosModel
 @{
-    ViewData["Title"] = "Criar Empréstimo";
+    ViewData["Title"] = "Editar Empréstimo";
 }
 
-<div class="container bg-dark rounded-5" >
+<div class="container bg-dark rounded-5">
     <div class="mb-5 text-center">
-        <h1>Criação de Empréstimos</h1>
+        <h1>Edição de Empréstimos</h1>
     </div>
 
-    <form method="post" asp-controller="Emprestimos" asp-action="Criar"> 
+    <form method="post" asp-controller="Emprestimos" asp-action="Editar">
+        <input type="hidden" asp-for=Id />
         <div class="mb-3">
             <label for="Emprestador" class="form-label text-light">Emprestador</label>
             <input type="text" class="form-control" asp-for="Emprestador" id="Emprestador" placeholder="Quem empresta o livro?">
@@ -26,9 +27,9 @@
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success w-50">Adicionar</button>
+            <button type="submit" class="btn btn-success w-50">Editar</button>
             <a class="btn btn-primary w-50" asp-asp-controller="Emprestimos" asp-action="Index">Voltar</a>
         </div>
-        
+
     </form>
 </div>
