--- a/EmprestimosLivros/Views/Emprestimos/Index.cshtml
+++ b/EmprestimosLivros/Views/Emprestimos/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@model IEnumerable<EmprestimosModel>
 
+
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-5">
-        <h1 class="text-light">Empréstimos</h1>
-        <a class="btn btn-success mx-5" asp-controller="Emprestimos" asp-action="Criar">Adicionar Novo Empréstimo</a>
+        <h1>Empréstimos</h1>
+        <a asp-controller="Emprestimos" asp-action="Criar" class="btn btn-success mx-2">Criar Empréstimo</a>
+
     </div>
 
     <table class="table table-dark table-hover">
@@ -13,7 +15,7 @@
                 <th scope="col">Recebedor</th>
                 <th scope="col">Nome do Livro</th>
                 <th scope="col">Data Atualização</th>
-            </tr>
+                <th></th>
         </thead>
         <tbody>
             @if (Model != null)
@@ -25,6 +27,10 @@
                         <td>@emprestimos.Recebedor</td>
                         <td>@emprestimos.NomeLivro</td>
                         <td>@emprestimos.DataUltimaAtualizacao</td>
+                        <td>
+                            <a asp-controller="Emprestimos" asp-action="Editar" asp-route-id="@emprestimos.Id" class="btn btn-warning mx-2">Editar</a>
+                            <a asp-controller="Emprestimos" asp-action="Excluir" asp-route-id="@emprestimos.Id" class="btn btn-danger mx-2">Excluir</a>
+                        </td>
                     </tr>
 
                 }
