--- a/EmprestimosLivros/Views/Emprestimos/Excluir.cshtml
+++ b/EmprestimosLivros/Views/Emprestimos/Excluir.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container bg-dark rounded-5">
-    <div class="mb-5 text-center">
+    <div class="mb-5 text-center text-light">
         <h1>Excluir Empréstimos</h1>
         <h2>Tem certeza que deseja excluir o registo seguinte?</h2>
     </div>
@@ -12,18 +12,18 @@
     <form method="post" asp-controller="Emprestimos" asp-action="Excluir">
         <input type="hidden" asp-for=Id />
         <div class="mb-3">
-            <label for="Emprestador" class="form-label text-light">Emprestador</label>
-            <input type="text" class="form-control" asp-for="Emprestador" id="Emprestador" placeholder="Quem empresta o livro?" disabled>
+            <label for="Emprestador" class="form-label text-light">Fornecedor:</label>
+            <input type="text" class="form-control text-light" asp-for="Emprestador" id="Emprestador" placeholder="Quem empresta o livro?" disabled>
             <span class="text-danger" asp-validation-for="Emprestador"></span>
         </div>
         <div class="mb-3">
-            <label for="Recebedor" class="form-label text-light">Recebedor</label>
-            <input type="text" class="form-control" asp-for="Recebedor" id="Recebedor" placeholder="A quem será emprestado o livro?" disabled>
+            <label for="Recebedor" class="form-label text-light">Recebedor:</label>
+            <input type="text" class="form-control text-light" asp-for="Recebedor" id="Recebedor" placeholder="A quem será emprestado o livro?" disabled>
             <span class="text-danger" asp-validation-for="Recebedor"></span>
         </div>
         <div class="mb-3">
-            <label for="NomeLivro" class="form-label text-light">Nome do livro</label>
-            <input type="text" class="form-control" asp-for="NomeLivro" id="NomeLivro" placeholder="Nome do livro a ser emprestado?" disabled>
+            <label for="NomeLivro" class="form-label text-light">Nome do livro:</label>
+            <input type="text" class="form-control text-light" asp-for="NomeLivro" id="NomeLivro" placeholder="Nome do livro a ser emprestado?" disabled>
             <span class="text-danger" asp-validation-for="NomeLivro"></span>
         </div>
 
