--- a/EmprestimosLivros/Views/Home/Index.cshtml
+++ b/EmprestimosLivros/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Empréstimo de livros</h1>
+    <p>Encontre um livro e deixe-se levar</p>
+    <div>
+        <img src="/img/imagemlivro.png" />
+    </div>
 </div>
